# sort

./: BUILD  CMakeCache.txt  CMakeLists.txt  Makefile  SortNews  article.cpp  article.h  article_spool.cpp  article_spool.h  cmake_install.cmake  heap_util.cpp  heap_util.h  main.cpp  term.cpp  term.h  term_spool.cpp  term_spool.h
data/: business.seg
extractTerms/: BUILD  Utility.cpp  Utility.h  fileOperation.cpp  fileOperation.h  searchTerm.cpp  searchTerm.h  simpleDic.cpp  simpleDic.h  tl_codetbl.cpp  tl_codetbl.h
